[gd_scene load_steps=44 format=3 uid="uid://bqe5hsuvprjns"]

[ext_resource type="Script" uid="uid://bncfavxct77il" path="res://Enemies/GenericTest/magebehaviour.gd" id="1_gg36u"]
[ext_resource type="PackedScene" uid="uid://bfanf6xq0q2eq" path="res://projectile.tscn" id="2_gg36u"]
[ext_resource type="Material" uid="uid://bcon13yakvxwu" path="res://attackparticles.tres" id="3_hci6a"]
[ext_resource type="Texture2D" uid="uid://ck1li6b7jki2c" path="res://Enemies/GenericTest/spark.png" id="4_5rwsa"]
[ext_resource type="QuadMesh" uid="uid://cr48mhkgbw1vr" path="res://Enemies/GenericTest/circleeffect.tres" id="5_0cs84"]
[ext_resource type="PackedScene" uid="uid://0npg7e1cmhi7" path="res://Enemies/GenericTest/mage_1.tscn" id="6_gg36u"]
[ext_resource type="PackedScene" uid="uid://dgmj5knh2pa0s" path="res://Enemies/GenericTest/mage_2.tscn" id="7_hci6a"]

[sub_resource type="SphereMesh" id="SphereMesh_rbfrn"]
radius = 1.5
height = 0.5
radial_segments = 8
rings = 8

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_gsgu7"]
albedo_color = Color(0.992506, 0, 0.230966, 1)
emission_enabled = true

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gsgu7"]
height = 4.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_33axu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gg36u"]
radius = 0.896748
height = 1.7935

[sub_resource type="CylinderShape3D" id="CylinderShape3D_rbfrn"]
height = 4.45947
radius = 14.8228

[sub_resource type="CylinderShape3D" id="CylinderShape3D_gsgu7"]
height = 3.68115
radius = 10.4272

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5rcum"]
albedo_color = Color(0.901961, 0.301961, 0, 1)
emission_enabled = true
emission = Color(0.9, 0.3, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_ajfth"]
material = SubResource("StandardMaterial3D_5rcum")
top_radius = 0.05
bottom_radius = 0.0
radial_segments = 16

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_l6hcf"]
albedo_color = Color(0.98, 0, 0, 1)
emission_enabled = true
emission = Color(0.980392, 0.705882, 0, 1)
emission_energy_multiplier = 2.0

[sub_resource type="CylinderMesh" id="CylinderMesh_36d6g"]
material = SubResource("StandardMaterial3D_l6hcf")
top_radius = 0.05
bottom_radius = 0.0
height = 1.5
radial_segments = 16
cap_bottom = false

[sub_resource type="Curve" id="Curve_ajfth"]
_data = [Vector2(0, 0), 0.0, 1.52688, 0, 0, Vector2(0.984375, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_044lg"]
curve = SubResource("Curve_ajfth")

[sub_resource type="Gradient" id="Gradient_ajfth"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_gg36u"]
gradient = SubResource("Gradient_ajfth")

[sub_resource type="Curve" id="Curve_l6hcf"]
_data = [Vector2(0, 0), 0.0, 3.88025, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_hci6a"]
curve = SubResource("Curve_l6hcf")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_36d6g"]
particle_flag_rotate_y = true
angle_min = -360.0
angle_max = 360.0
angle_curve = SubResource("CurveTexture_044lg")
direction = Vector3(0, 1, 0)
spread = 180.0
initial_velocity_min = 1.0
initial_velocity_max = 2.0
radial_velocity_min = -2.23517e-05
radial_velocity_max = 9.99998
gravity = Vector3(0, 0, 0)
color = Color(1, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_gg36u")
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("CurveTexture_hci6a")

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_5rwsa"]
transparency = 1
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("4_5rwsa")
emission_enabled = true
emission = Color(0.533037, 0.533037, 0.533037, 1)
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="QuadMesh" id="QuadMesh_5rcum"]
material = SubResource("StandardMaterial3D_5rwsa")

[sub_resource type="CurveTexture" id="CurveTexture_2kna6"]

[sub_resource type="Curve" id="Curve_e7avo"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.539063, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_uvlc3"]
curve = SubResource("Curve_e7avo")

[sub_resource type="Curve" id="Curve_job5r"]
_data = [Vector2(0, 0.724521), 0.0, -5.95322, 0, 0, Vector2(0.106771, 0.836024), 1.5112, 1.5112, 0, 0, Vector2(0.976563, 0), -1.11403, -1.11403, 0, 0, Vector2(0.976563, 0), 0.0, 0.0, 0, 0]
point_count = 4

[sub_resource type="CurveTexture" id="CurveTexture_63e3d"]
curve = SubResource("Curve_job5r")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_5rcum"]
emission_shape = 1
emission_sphere_radius = 4.0
direction = Vector3(0, 0.1, 0)
spread = 0.0
initial_velocity_max = 3.0
radial_velocity_min = -2.23517e-05
radial_velocity_max = 20.0
radial_velocity_curve = SubResource("CurveTexture_uvlc3")
gravity = Vector3(0, 10, 0)
scale_min = 0.0
scale_curve = SubResource("CurveTexture_63e3d")
alpha_curve = SubResource("CurveTexture_2kna6")

[sub_resource type="Curve" id="Curve_mcsra"]
_data = [Vector2(0, 0), 0.0, 1.52688, 0, 0, Vector2(0.984375, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_5rcum"]
curve = SubResource("Curve_mcsra")

[sub_resource type="Gradient" id="Gradient_5oqo1"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_36d6g"]
gradient = SubResource("Gradient_5oqo1")

[sub_resource type="Curve" id="Curve_ojyi1"]
_data = [Vector2(0, 0), 0.0, 3.88025, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_j5php"]
curve = SubResource("Curve_ojyi1")

[sub_resource type="Curve" id="Curve_gsgu7"]
_limits = [0.0, 4.0, 0.0, 1.0]
_data = [Vector2(0, 4), 0.0, -0.610585, 0, 0, Vector2(1, 0.113522), -4.66147, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveTexture" id="CurveTexture_sli65"]
curve = SubResource("Curve_gsgu7")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_l6hcf"]
lifetime_randomness = 0.3
particle_flag_rotate_y = true
angle_min = -360.0
angle_max = 360.0
angle_curve = SubResource("CurveTexture_5rcum")
direction = Vector3(0, 0, 0)
spread = 180.0
initial_velocity_min = 15.0
initial_velocity_max = 20.0
radial_velocity_min = -2.23517e-05
radial_velocity_max = -2.23517e-05
gravity = Vector3(0, 0, 0)
scale_curve = SubResource("CurveTexture_sli65")
color = Color(1, 0, 0, 1)
color_ramp = SubResource("GradientTexture1D_36d6g")
hue_variation_min = -1.0
hue_variation_max = 1.0
hue_variation_curve = SubResource("CurveTexture_j5php")

[sub_resource type="BoxShape3D" id="BoxShape3D_hci6a"]
size = Vector3(1.21682, 2.07956, 2.21466)

[node name="Enemy" type="CharacterBody3D"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
script = ExtResource("1_gg36u")
projectile_scene = ExtResource("2_gg36u")

[node name="MinimapSign" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5.47286, 0)
layers = 2
mesh = SubResource("SphereMesh_rbfrn")
surface_material_override/0 = SubResource("StandardMaterial3D_gsgu7")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
visible = false
mesh = SubResource("CapsuleMesh_gsgu7")

[node name="Area3D" type="Area3D" parent="MeshInstance3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeshInstance3D/Area3D"]
shape = SubResource("CapsuleShape3D_33axu")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.4186, 0)
shape = SubResource("CapsuleShape3D_gg36u")

[node name="VisibilityRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisibilityRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.22974, 0)
shape = SubResource("CylinderShape3D_rbfrn")

[node name="MeleeAttackRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="MeleeAttackRange"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.840576, 0)
shape = SubResource("CylinderShape3D_gsgu7")
debug_color = Color(0.7, 0, 0, 0.419608)

[node name="PatrolTimer" type="Timer" parent="."]
one_shot = true

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_max_distance = 10.01
avoidance_enabled = true
max_neighbors = 1
debug_use_custom = true
debug_path_custom_color = Color(0, 0.593282, 0.731677, 1)

[node name="enemy" type="Node3D" parent="."]
transform = Transform3D(0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0, 0, 0)

[node name="AttackParticles" type="GPUParticles3D" parent="enemy"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 3.52689, 0)
emitting = false
one_shot = true
speed_scale = 3.0
explosiveness = 1.0
fixed_fps = 60
process_material = ExtResource("3_hci6a")
draw_passes = 2
draw_pass_1 = SubResource("CylinderMesh_ajfth")
draw_pass_2 = SubResource("CylinderMesh_36d6g")

[node name="DeathParticles1" type="GPUParticles3D" parent="enemy"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.81282, 0)
emitting = false
amount = 20
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_36d6g")
draw_pass_1 = SubResource("QuadMesh_5rcum")

[node name="DeathParticles2" type="GPUParticles3D" parent="enemy"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0.883667, 0)
emitting = false
amount = 10
one_shot = true
explosiveness = 1.0
fixed_fps = 60
process_material = SubResource("ParticleProcessMaterial_5rcum")
draw_pass_1 = ExtResource("5_0cs84")

[node name="DeathParticles3" type="GPUParticles3D" parent="enemy"]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 3.83778, 0)
emitting = false
amount = 30
one_shot = true
explosiveness = 0.9
randomness = 0.25
fixed_fps = 60
trail_lifetime = 2.5
process_material = SubResource("ParticleProcessMaterial_l6hcf")
draw_pass_1 = SubResource("QuadMesh_5rcum")

[node name="mage1" parent="enemy" instance=ExtResource("6_gg36u")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.8058, 0)
visible = false

[node name="mage2" parent="enemy" instance=ExtResource("7_hci6a")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.806, 0)

[node name="AttackHitbox" type="Area3D" parent="enemy" groups=["damager"]]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0)
monitoring = false
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="enemy/AttackHitbox" groups=["damager"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1.4971, 1.7419, -0.00662231)
shape = SubResource("BoxShape3D_hci6a")
debug_color = Color(0.7, 0, 0, 0.419608)
